@@ -58,9 +58,6 @@ data.each do |datum|
     datum.map! {|datum| datum.to_f}
 end
 
-#pp keys; exit
-#pp data; exit
-
 if OPTIONS[:function] || OPTIONS[:variance] 
     OPTIONS[:analyzer].size.times do |i|
         analyzer = OPTIONS[:analyzer][i]
@@ -80,11 +77,14 @@ if OPTIONS[:over]
         comparisons = [0,0,0]
         data.each do |x,y|
             last_y = function.most_strict_pair[1]
-            pp function.expected_error(x), (y - last_y).abs
-            puts
+            #pp function.expected_error(x), (y - last_y).abs
+            #puts
             comparisons[function.expected_error(x) <=> (y - last_y).abs] += 1
         end
-        pp comparisons
+        puts "    point(+, over)     : #{comparisons[-1]}"
+        puts "----function-curve---- : #{comparisons[ 0]}"
+        puts "    point(-, under)    :#{comparisons[ 1]}"
+        #pp comparisons
     end
 end
 
@@ -115,7 +115,6 @@ if OPTIONS[:table]
         keys << "f#{i}"
     end
     puts keys.map{|v| sprintf("%9s", v)}.join(" ")
-
 
     ## Print values
     results.each do |items|
